Fixed bug where home page would look straneg on safari

--- a/frontend/src/components/HomePage/CSS/RoomContainer.css
+++ b/frontend/src/components/HomePage/CSS/RoomContainer.css
@@ -11,6 +11,7 @@
 	justify-content: center;
 	align-items: center;
 	grid-template-columns: repeat(auto-fill, minmax(17rem, 1fr));
+	grid-template-rows: 1fr;
 	row-gap: 1.875rem;
 	column-gap: 1.25rem;
 }
