--- a/frontend/src/components/HomePage/CSS/SingleRoom.css
+++ b/frontend/src/components/HomePage/CSS/SingleRoom.css
@@ -5,6 +5,8 @@
 	width: 100%;
 	height: 100%;
 	max-width: 400px;
+
+	margin: 0px;
 }
 
 .room {
@@ -16,6 +18,7 @@
 	height: 100%;
 	max-width: 100%;
 	min-height: 350px;
+
 }
 
 .star {
